--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,17 @@
 # 核心数据处理和科学计算
 numpy>=1.21.0
 pandas>=1.3.0
-# scipy>=1.7.0
+scipy>=1.7.0
 
 # 机器学习库
 scikit-learn>=1.0.0
-imbalanced-learn>=0.10.1
-# xgboost>=1.5.0
-# lightgbm>=3.3.0
+ctgan>=0.7.0
 
 # 数据可视化
 matplotlib>=3.5.0
-seaborn>=0.11.0
-# plotly>=5.5.0
 
 # 降维和可视化算法
 umap-learn>=0.5.0
 
 # 开发工具
 jupyter>=1.0.0
-# notebook>=6.4.0
-# ipython>=7.0.0
-
-# 其他工具库
-# tqdm>=4.60.0
-# joblib>=1.1.0
